<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".ManageProfileActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_profile_title"
        android:textSize="36dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_profile_setName"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:id="@+id/editTextGetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="8dp">

        <TextureView
            android:id="@+id/TextureViewPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btnTakePhoto"
            android:layout_weight="0.8"
            android:layout_marginBottom="10dp"/>

        <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
        android:text="@string/btn_take_picture"
        android:background="@drawable/roundbuttons"
        android:layout_weight="0.05"
            android:textColor="#FFFFFF"
        android:layout_marginBottom="15dp" />

    </RelativeLayout>
</LinearLayout>